feat: rename & upload

--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "menus": {
       "explorer/context": [
         {
+          "command": "vscode-oss-sync.renameAndUploadFile",
+          "when": "!explorerResourceIsFolder && resourcePath =~ /ossSyncAssets/",
+          "group": "1_modification"
+        },
+        {
           "command": "vscode-oss-sync.uploadFile",
           "when": "!explorerResourceIsFolder && resourcePath =~ /ossSyncAssets/",
           "group": "1_modification"
@@ -34,6 +39,10 @@
         }
       ],
       "commandPalette": [
+        {
+          "command": "vscode-oss-sync.renameAndUploadFile",
+          "when": "False"
+        },
         {
           "command": "vscode-oss-sync.uploadFile",
           "when": "False"
@@ -48,6 +57,10 @@
       {
         "command": "vscode-oss-sync.config",
         "title": "OssSync: Config"
+      },
+      {
+        "command": "vscode-oss-sync.renameAndUploadFile",
+        "title": "OssSync: Rename & Upload"
       },
       {
         "command": "vscode-oss-sync.uploadFile",
@@ -87,7 +100,8 @@
   "dependencies": {
     "cos-nodejs-sdk-v5": "^2.11.12",
     "fs-extra": "^10.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
@@ -95,6 +109,7 @@
     "@types/lodash": "^4.14.184",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
+    "@types/uuid": "^9.0.0",
     "@types/vscode": "^1.70.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
