--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "OssSync",
   "publisher": "zenonux",
   "description": "oss sync extension for vscode(tencent cos).",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "engines": {
     "vscode": "^1.70.0"
   },
@@ -33,6 +33,11 @@
           "group": "1_modification"
         },
         {
+          "command": "vscode-oss-sync.uploadFolder",
+          "when": "explorerResourceIsFolder && resourcePath =~ /ossSyncAssets/",
+          "group": "1_modification"
+        },
+        {
           "command": "vscode-oss-sync.syncFolder",
           "when": "explorerResourceIsFolder && resourcePath =~ /ossSyncAssets/",
           "group": "1_modification"
@@ -45,6 +50,10 @@
         },
         {
           "command": "vscode-oss-sync.uploadFile",
+          "when": "False"
+        },
+        {
+          "command": "vscode-oss-sync.uploadFolder",
           "when": "False"
         },
         {
@@ -65,6 +74,10 @@
       {
         "command": "vscode-oss-sync.uploadFile",
         "title": "OssSync: Upload"
+      },
+      {
+        "command": "vscode-oss-sync.uploadFolder",
+        "title": "OssSync: Upload Folder"
       },
       {
         "command": "vscode-oss-sync.syncFolder",
