--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "OssSync",
   "publisher": "zenonux",
   "description": "oss sync extension for vscode(tencent cos).",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "engines": {
     "vscode": "^1.70.0"
   },
@@ -49,6 +49,9 @@
         }
       ],
       "commandPalette": [
+        {
+          "command": "vscode-oss-sync.config"
+        },
         {
           "command": "vscode-oss-sync.copyLink",
           "when": "False"
