--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "OssSync",
   "publisher": "zenonux",
   "description": "oss sync extension for vscode(tencent cos).",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "engines": {
     "vscode": "^1.70.0"
   },
@@ -59,10 +59,6 @@
           "when": "False"
         },
         {
-          "command": "vscode-oss-sync.copyAndUploadFile",
-          "when": "False"
-        },
-        {
           "command": "vscode-oss-sync.uploadFolder",
           "when": "False"
         },
@@ -84,10 +80,6 @@
       {
         "command": "vscode-oss-sync.uploadFile",
         "title": "OssSync: Upload"
-      },
-      {
-        "command": "vscode-oss-sync.copyAndUploadFile",
-        "title": "OssSync: Copy & Upload"
       },
       {
         "command": "vscode-oss-sync.uploadFolder",
@@ -127,8 +119,7 @@
   "dependencies": {
     "cos-nodejs-sdk-v5": "^2.11.12",
     "fs-extra": "^10.0.0",
-    "lodash": "^4.17.21",
-    "uuid": "^9.0.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
@@ -136,7 +127,6 @@
     "@types/lodash": "^4.14.184",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
-    "@types/uuid": "^9.0.0",
     "@types/vscode": "^1.70.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
